--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -8,8 +8,8 @@
 <% unless @article.nil? %>
     <%= form_tag("/admin/content/merge_articles", method: "get") do %>
         <h3>Merge Articles</h3>
-        <%= label_tag("target_article_id", "Article Id:") %>
-        <%= text_field_tag("target_article_id", id: 'merge_with') %>
+        <%= label_tag("merge_with", "Article Id:") %>
+        <%= text_field_tag("merge_with", id: 'merge_with') %>
         <%= submit_tag("Merge") %>
         <%= hidden_field_tag(:article_id, @article.id) %>
     <% end %>
